--- a/app/views/cross_organizations/new.html.erb
+++ b/app/views/cross_organizations/new.html.erb
@@ -4,7 +4,6 @@
 <%= render :partial => 'form', :locals => { :f => f } %>
 
 <p>
-  <%= f.submit l(:button_create) %>
-  <%= f.submit l(:button_create_and_continue), :name => 'continue' %>
+    <div class="btn-footer"> <%= f.submit l(:button_create),:class=>'button-blu' %> </div>
 </p>
 <% end %>
