--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -1,8 +1,7 @@
 <h2><%= link_to l(:label_section_plural), sections_path %> &#187; <%= h(@section) %></h2>
 <% labelled_form_for @section, :html =>{:multipart =>true} do |f| %>
-<%= submit_tag l(:button_save) %>
 <%= render :partial => 'form', :locals => { :f => f } %>
-<%= submit_tag l(:button_save) %>
+    <div class="btn-footer"><%= submit_tag l(:button_save), :class=>'button-blu' %></div>
 <!-- <%= f.submit 'Update' %> -->
 
 <% end %>
