--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -1,8 +1,5 @@
 <h2><%= link_to l(:label_section_plural), sections_path %> &#187; <%= l(:label_section_new) %></h2>
 <% labelled_form_for @section, :html => {:multipart => true} do |f| %>
-<%= render :partial => 'form', :locals => { :f => f } %>
-<p>
-  <%= f.submit l(:button_create) %>
-  <%= f.submit l(:button_create_and_continue), :name => 'continue' %>
-</p>
+    <%= render :partial => 'form', :locals => {:f => f} %>
+    <div class="btn-footer">  <%= f.submit l(:button_create), :class => 'button-blu' %>  </div>
 <% end %>
