--- a/app/views/top_menus/edit.html.erb
+++ b/app/views/top_menus/edit.html.erb
@@ -1,6 +1,5 @@
 <h2><%= link_to l(:label_top_menu_plural), top_menus_path %> &#187; <%= h(@top_menu) %></h2>
 <% labelled_form_for (@top_menu) do |f| %>
-  <%= submit_tag l(:button_save) %>
   <%= render :partial => 'form', :locals => { :f => f } %>
-  <%= submit_tag l(:button_update) %>
+    <div class="btn-footer">  <%= submit_tag l(:button_update),:class=>'button-blu' %> </div>
 <% end %>
