--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -381,13 +381,17 @@
 }
 
 .fs-logged2 span {
-    font-variant: small-caps;
+   /* font-variant: small-caps;   */
     overflow: hidden;
-    font-size: 1.2em;
+    font-size: 1em;
     vertical-align: middle;
     display: table-cell;
     padding-left: 5px;
     max-width: 188px;
+    text-align: center;
+    font-weight: bold;
+    width: 100%;
+    color: #016284;
 }
 
 #fs-login2-asso {
