--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -27,7 +27,7 @@
                    </div>
                    <div class='fs-social'>
                      <div class='fs-social-fb '>
-                       <a href="https://www.facebook.com/sharer/sharer.php?s=100&amp;p%5Btitle%5D=titlehere&amp;p%5Burl%5D=http%3A%2F%2Fwww.yoururlhere.com&amp;p%5Bsummary%5D=yoursummaryhere&amp;p%5Bimages%5D%5B0%5D=https://www.google.com/images/srpr/logo3w.png" target="_blank" >
+                       <a href="<%=	 fburl(articolo) %>" target="_blank" >
                          <%= image_tag "ico/fb-share.jpg" %>    </a>
                      </div>
                      <div class='fs-social-tw '>
