--- a/app/views/editorial/_edizione_smtp.html.erb
+++ b/app/views/editorial/_edizione_smtp.html.erb
@@ -2,32 +2,27 @@
 <%# @prj.newsletter_smtp(1) %>
 <% defurl = "http://" + Setting.host_name %>
 <style type="text/css" xmlns="http://www.w3.org/1999/html">
-        /* Backgrounds */
-    .email_background {
-        width: 640px;
-        background: url('<%= defurl %>/images/commons/email_bg.jpg') repeat-y;
-    }
-
-    table td {
-        padding: 0
-    }
-
-    .smtp {
-        color: #00212D;
-        font-family: Arial, Helvetica, Sans-Serif;
-        font-size: 13px;
-    }
+table td {padding: 0; margin: 0; border: 0;}
+.smtp {color: #00212D;font-family: Arial, Helvetica, Sans-Serif;font-size:13px;}
+.s1{text-align: right;vertical-align: top; background-color: #fefefe;}
+.s2{text-align: left;vertical-align: middle; background-color: #ffffff; border-top:solid 1px #f1e9b8; font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#333333; line-height:2em; }
+.s3{text-align: left;vertical-align: middle; font-family:Arial, Helvetica, sans-serif; font-size:13px;}
+.s3 a{color:#333333; text-decoration: none;}
+.a1{text-align: justify;vertical-align: top; background-color: #f4f4f4; border-top:1px solid #cccccc; border-bottom:1px solid #cccccc;}
+.a2{text-align: left;vertical-align: top; font-family:Arial, Helvetica, sans-serif; font-size:16px; color:#003548; text-align: justify;}
+.a3{text-align: right;vertical-align: top; font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#333333; line-height:15px; text-decoration: underline; font-style: italic;}
+.a4{text-align: justify; font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#000000; line-height:18px; }
 </style>
 
-<!-- Contenitore -->
-<table class="smtp" cellpadding="0" cellspacing="0" border="0" width="100%" bgcolor="#0f6da1">
+<%# Contenitore %>
+<table class="smtp" width="100%" cellspacing="0" bgcolor="#0f6da1">
 <tr>
 <td align="center">
-<table cellpadding="0" cellspacing="0" border="0" width="640">
+<table width="640" cellspacing="0">
 <tr>
 <td>
-<!-- Pre Email -->
-<table cellpadding="0" cellspacing="0" border="0" width="640">
+<%# Pre Email %>
+<table width="640" cellspacing="0">
 <tr>
   <td valign="bottom" height="40" align="center">
     <font style="font-family: Tahoma, Arial, Helvetica, sans-serif; font-size:11px; color:#ffffff;">
@@ -39,32 +34,27 @@
 </tr>
 <tr>
   <td>
-    <table cellpadding="0" cellspacing="0" border="0" width="640" style="font-size:0;">
+    <table width="640" cellspacing="0" style="font-size:0;">
       <tr>
         <td>
-          <img src="<%= defurl %>/images/commons/top_fade.jpg" width="640" height="20" border="0"/>
+          <img src="<%= defurl %>/images/commons/top_fade.jpg" width="640" height="20"/>
         </td>
       </tr>
     </table>
   </td>
 </tr>
-<tr>
-  <td align="center" background="<%= defurl %>/images/commons/email_bg.jpg" class="email_background">
-  </td>
-</tr>
-<tr>
-<td align="center" background="<%= defurl %>/images/commons/email_bg.jpg" class="email_background">
-<!-- IMPORTANTE!   inizio contenuto   -->
-<!------------------------------------------------------------------------->
-<!-- Inizio sezione con logo e nomeutente -->
-<table width="560" border="0" cellpadding="0" cellspacing="0">
+<tr><td align="center" background="<%= defurl %>/images/commons/email_bg.jpg">
+<%# IMPORTANTE!   inizio contenuto   %>
+<%#---------------------------------------------------------------------%>
+<%# Inizio sezione con logo e nomeutente %>
+<table width="560">
   <tr>
     <td width="242" align="left" valign="top">
-      <!-- logo -->
-      <a href="<%= defurl %>" target="_blank"><img src="<%= defurl %>/images/commons/fiscosport_news.jpg" border="0" height="106"/></a>
+      <%# logo %>
+      <a href="<%= defurl %>" target="_blank"><img src="<%= defurl %>/images/commons/fiscosport_news.jpg" height="106"/></a>
     <td align="left" valign="top">
-      <!-- tabella di 2 righe per il testo -->
-      <table width="318" border="0" cellpadding="0" cellspacing="0">
+      <%# tabella di 2 righe per il testo %>
+      <table width="318">
         <tr>
           <td height="0" align="left" valign="center" style="border-bottom:1px solid #1C6693;">
             <table width="100%">
@@ -99,235 +89,108 @@
           </td>
         </tr>
       </table>
-      <!-- fine tabella di 2 righe per il testo -->
+      <%# fine tabella di 2 righe per il testo %>
     </td>
   </tr>
 </table>
-<%= render :partial => 'editorial/edizione_smtp_convention', :locals => { :defurl => defurl } %>
-<!-- fine sezione con logo e nomeutente -->
-<!-- inizio visibile solo se associato o affiliato
-<table width="560" border="0" cellpadding="0" cellspacing="0">
-  <tr>
-    <td width="500" bgcolor="#ffffff" align="right" style="vertical-align: middle;">
-      <font style="font-family:Tahoma,Arial, Helvetica, sans-serif; font-size:15px; color:#1e1e1e; line-height:18px; font-weight: bold;">
-         <% if @user %>
-          <%= user_myasso_text(@user) %>
-        <% else %>
-          @@user_convention
-        <% end %>
-      </font>
-    </td>
-    <td width="60" valign="bottom" align="right">
-      <% if @user %>
-        <%= image_tag(defurl + user_myasso_icon(@user, :s), :width => 48, :height => 48) %>
-      <% else %>
-        @@user_convention_icon
-      <% end %>
-    </td>
-  </tr>
-</table>-->
-
-<!-- fine riga visibile solo se associato o è affiliato'  / sotto un'immagine di spazio -->
-<table width="560" border="0" cellpadding="0" cellspacing="0" style="font-size:0;">
+<%# fine sezione con logo e nomeutente %>
+<%# inizio visibile solo se associato o affiliato%>
+<% if @user %>
+  <%= render :partial => 'editorial/edizione_smtp_convention', :locals => { :defurl => defurl } %>
+<% else %>
+  @@user_convention
+<% end %>
+<%# fine riga visibile solo se associato o è affiliato'  / sotto un'immagine di spazio %>
+<table width="560" style="font-size:0;">
   <tr>
     <td width="560" valign="bottom" bgcolor="#ffffff" height="6">
-      <img src="<%= defurl %>/images/commons/email_spacer_colors.jpg" width="560" height="6" border="0"/>
+      <img src="<%= defurl %>/images/commons/email_spacer_colors.jpg" width="560" height="6"/>
     </td>
   </tr>
   <tr>
     <td width="560" valign="bottom" bgcolor="#ffffff" height="35">
-      <img src="<%= defurl %>/images/commons/email_spacer.jpg" width="560" height="35" border="0"/>
+      <img src="<%= defurl %>/images/commons/email_spacer.jpg" width="560" height="35"/>
     </td>
   </tr>
 </table>
-<!--inizio dicitura indice -->
-<table width="560" border="0" cellpadding="0" cellspacing="0">
+<%#inizio dicitura indice %>
+<table width="560">
   <tr>
     <td width="100" align="right" valign="center" height="50">
-      <img src="<%= defurl %>/images/commons/indice_ico.jpg" alt="Indice" border="0"/>
+      <img src="<%= defurl %>/images/commons/indice_ico.jpg" alt="Indice"/>
     </td>
     <td width="460" align="right" valign="center" height="50">
-      <img src="<%= defurl %>/images/commons/indice.jpg" alt="Indice" border="0"/>
+      <img src="<%= defurl %>/images/commons/indice.jpg" alt="Indice"/>
     </td>
   </tr>
 </table>
-<!--fine  dicitura indice -->
-<!-------------------------------------------------------------------->
-<!-- inizio loop sezione indice -->
+<%#fine  dicitura indice %>
+<%#----------------------------------------------------------------%>
+<%# inizio loop sezione indice %>
 <% last_tops=0
    ancora = "" %>
 <% @art.each do |nart| %>
-    <%# ancora = h(truncate(nart.subject, :length => 30).to_slug) %>
-    <% ancora = nart.id.to_s %>
-
-    <table width="560" border="0" cellpadding="0" cellspacing="0">
-      <% if last_tops != nart.section.top_section_id %>
-          <tr>
-            <td height="14" bgcolor="#f5f5f5"></td>
-            &nbsp; </tr>
-          <tr>
-            <td width="560" align="right" valign="top" bgcolor="#fefefe">
-              <table width="560" border="0" cellpadding="0" cellspacing="0">
-                <tr>
-                  <td width="36" height="30" align="center" valign="top">
-                    <!--
-                    <img src="<%#defurl %>/images/ico/freg-y.png" border="0"/>     -->
-                  </td>
-                  <td width="524" align="left" valign="center" bgcolor="ffffff" style="border-top:solid 1px #f1e9b8;">
-                    <font style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#333333; line-height:2em;">
-                      <!-- sezione -->
-                      <strong>
-                        <span style="color: #0C4481;"><%= (nart.section.nil? ? "? non trovata la sezione ?" : nart.section.top_section.to_s) %> </span>
-                        :: <span style="color: #e95f03;"> <%= nart.section.to_s %></span> </strong></font>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-      <% end %>
-      <!-- titolo --->
-      <tr>
-        <td width="560">
-          <table width="560" border="0" cellpadding="10" cellspacing="0">
-            <tr>
-              <td width="28" align="left" valign="middle">
-                <a href="#<%= ancora %>">
-                  <img src="<%= defurl %>/images/ico/fred24-y.png" border="0"/>
-                </a>
-              </td>
-              <td width="532" align="left" valign="center">
-
-                <font style="font-family:Arial, Helvetica, sans-serif; font-size:13px;">
-                  <a href="#<%= ancora %>" style="color:#333333; text-decoration: none;">
-                    <%= h(nart.subject) %>
-                  </a>
-                </font>
-              </td>
-            </tr>
-            <tr>
-              <td>&nbsp;</td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <!-- fine titolo --->
-    </table>
-    <%# end %>
-    <% last_tops = nart.section.top_section_id %>
+ <%# ancora = h(truncate(nart.subject, :length => 30).to_slug) %>
+ <% ancora = nart.id.to_s %>
+ <table width="560" cellspacing="0" >
+ <% if last_tops != nart.section.top_section_id %>
+  <tr><td height="14" bgcolor="#f5f5f5"></td>&nbsp; </tr>
+  <tr><td width="560" class="s1">
+   <table width="560"><tr>
+    <td width="36" height="30" align="center" valign="top"><%# <img src="<%= defurl % >/images/ico/freg-y.png"/> %></td>
+    <td width="524" class="s2"><%# sezione %><strong><span style="color: #0C4481;"><%= (nart.section.nil? ? "? non trovata la sezione ?" : nart.section.top_section.to_s) %></span> :: <span style="color: #e95f03;"> <%= nart.section.to_s %></span></strong></td>
+   </tr></table>
+  </td></tr>
+  <% end %>
+  <%# titolo -%><tr><td width="560">
+   <table width="560" cellpadding="10">
+    <tr>
+     <td width="28" align="left" valign="middle"><a href="#<%= ancora %>"><img src="<%= defurl %>/images/ico/fred24-y.png"/></a></td>
+     <td width="532" class="s3"><a href="#<%= ancora %>"><%= h(nart.subject) %></a></td>
+    </tr>
+    <tr><td>&nbsp;</td></tr>
+   </table>
+  </td></tr><%# fine titolo -%>
+ </table>
+ <% last_tops = nart.section.top_section_id %>
 <% end %>
-<!-- fine loop sezione indice -->
-<!------------------------------------------------------------------------->
-<!-- spazio -->
-<table width="560" border="0" cellpadding="0" cellspacing="0" style="font-size:0;">
-  <tr>
-    <td height="33">
-    </td>
-  </tr>
-  <tr>
-    <td width="560" valign="bottom" bgcolor="#ffffff" height="35">
-      <img src="<%= defurl %>/images/commons/email_spacer.jpg" width="560" height="35" border="0"/>
-    </td>
-  </tr>
+<%# fine loop sezione indice %>
+<%#---------------------------------------------------------------------%>
+<%# spazio %>
+<table width="560" style="font-size:0;">
+  <tr><td height="33"></td></tr>
+  <tr><td width="560" valign="bottom" bgcolor="#ffffff" height="35"><img src="<%= defurl %>/images/commons/email_spacer.jpg" width="560" height="35"/> </td></tr>
 </table>
-<!--inizio dicitura sommario  -->
-<table width="560" border="0" cellpadding="0" cellspacing="0">
-  <tr>
-    <td height="16">
-    </td>
+<%#inizio dicitura sommario  %>
+<table width="560">
+  <tr><td height="16"></td></tr>
+  <tr><td width="100" align="right" valign="center" height="50"><img src="<%= defurl %>/images/commons/sommario_ico.jpg" alt="Sommario"/></td>
+    <td width="460" align="right" valign="center" height="50"><img src="<%= defurl %>/images/commons/sommario.jpg" alt="Sommario"/></td>
   </tr>
-  <tr>
-    <td width="100" align="right" valign="center" height="50">
-      <img src="<%= defurl %>/images/commons/sommario_ico.jpg" border="0" alt="Sommario"/>
-    </td>
-    <td width="460" align="right" valign="center" height="50">
-      <img src="<%= defurl %>/images/commons/sommario.jpg" border="0" alt="Sommario"/>
-    </td>
-  </tr>
-  <tr>
-    <td height="33">
-    </td>
-  </tr>
+  <tr><td height="33"></td></tr>
 </table>
-<!--fine  dicitura sommario  -->
-<!------------------------------------------------------------------------->
-<!-- inizio sezione loop articoli -->
+<%#fine  dicitura sommario  %>
+<%#---------------------------------------------------------------------%>
+<%# inizio sezione loop articoli %>
 <% @art.each do |articolo| %>
-    <%# ancora = h(truncate(articolo.subject, :length => 30).to_slug) %>
-    <% ancora = articolo.id.to_s %>
-    <table width="560" border="0" cellpadding="0" cellspacing="0">
-      <tr>
-        <td width="560" align="center" valign="top" bgcolor="#f4f4f4" style="border-top:1px solid #cccccc; border-bottom:1px solid #cccccc;">
-          <!-- inizio tabella contenuti -->
-          <table width="560" border="0" cellpadding="0" cellspacing="9">
-            <tr>
-              <!-- sotto: immagine sx -->
-              <td width="120" align="left" valign="top" rowspan="2">
-
-                <%= link_to(image_tag( defurl + art_image(articolo, :m, :newsletter=> true)), link_to_articolo(articolo, {:only_path => false}), :id => ancora) %>
-
-              </td>
-              <!-- titolo  -->
-              <td width="440" align="left" valign="top">
-                <font style="font-family:Arial, Helvetica, sans-serif; font-size:16px; color:#003548; text-align: justify;">
-                  <strong> <%= articolo.subject %>
-                  </strong> </font><br/>
-              </td>
-            </tr>
-            <tr>
-              <!--  riga autore  -->
-              <td width="440" align="right" valign="top">
-                <font style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#333333; line-height:15px; text-decoration: underline; font-style: italic;">
-                  <strong>
-                    <img src="<%= defurl %>/images/ico/pen24.png" border="0"/> <%= articolo.author %> </strong>
-                </font>
-              </td>
-            </tr>
-            <tr>
-              <!-- riga riassunto -->
-              <td width="560" colspan="2">
-                <font style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#000000; line-height:18px; ">
-                  <%= articolo.summary %>
-                </font><br/>
-              </td>
-            </tr>
-          </table>
-          <!--fine tabella contenuti -->
-          <!-- pulsante vedi -->
-          <table width="560" border="0" cellpadding="0" cellspacing="0">
-            <tr>
-              <td width="560" height="33" align="right" valign="top">
-                <%= link_to(image_tag(defurl + '/images/commons/btn_news_y.gif', :width => 107, :height => 26), link_to_articolo(articolo, {:only_path => false , :target => "_blank"})) %>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <tr>
-        <td width="560" height="13"></td>
-      </tr>
-    </table>
-<% end %>
-<!-- fine sezione loop articoli -->
-<!------------------------------------------------------------------------->
-<!-- !importante fine   contenuto  email-->
-</td>
-</tr>
+<%# ancora = h(truncate(articolo.subject, :length => 30).to_slug) %>
+<% ancora = articolo.id.to_s %>
+<table width="560" cellspacing="0"><tr><td width="560" class="a1" >
+  <%# inizio tabella contenuti %>
+  <table width="560" cellspacing="9">
+  <tr><%# sotto: immagine sx %><td width="120" align="left" valign="top" rowspan="2"><%= link_to(image_tag( defurl + art_image(articolo, :m, :newsletter=> true)), link_to_articolo(articolo, {:only_path => false}), :id => ancora) %></td>
+  <%# titolo  %><td width="440" class="2"><strong><%= articolo.subject %></strong><br/></td></tr>
+  <tr><%#  riga autore  %><td width="440" class="a3"><strong><img src="<%= defurl %>/images/ico/pen24.png"/> <%= articolo.author %></strong></td></tr>
+  <tr><%# riga riassunto %><td width="560" colspan="2" class="a4"><%= articolo.summary %><br/></td></tr></table><%#fine tabella contenuti %>
+  <%# pulsante vedi %><table width="560"><tr><td width="560" height="33" align="right" valign="top"><%= link_to(image_tag(defurl + '/images/commons/btn_news_y.gif', :width => 107, :height => 26), link_to_articolo(articolo, {:only_path => false , :target => "_blank"})) %></td></tr></table>
+</td></tr>
+<tr><td width="560" height="13"></td></tr></table>
+<% end %><%# fine sezione loop articoli %>
+<%#---------------------------------------------------------------------%>
+<%# !importante fine   contenuto  email%>
+</td></tr>
 </table>
-</td>
-</tr>
-<tr>
-  <td>
-    <img src="<%= defurl %>/images/commons/bottom_fade.jpg" width="640" border="0" height="28"/>
-  </td>
-</tr>
-<tr>
-  <td valign="top" height="80" align="center">
-    <font style="font-family: Tahoma, Arial, Helvetica, sans-serif; font-size:11px; color:#ffffff;">
-      &nbsp;
-    </font>
-  </td>
-</tr>
-</table>
-</td>
-</tr>
-</table>
+</td></tr>
+<tr><td><img src="<%= defurl %>/images/commons/bottom_fade.jpg" width="640" height="28"/></td></tr>
+<tr><td valign="top" height="80" align="center">&nbsp;</td></tr></table>
+</td></tr></table>
